Ecs-rds/sg.yml
---
AWSTemplateFormatVersion: 2010-09-09

Parameters:
    Albsg:
        Type: String
    
    VpcID:
        Type: String

Resources:
    wahajwebserver:
        Type: AWS::EC2::SecurityGroup
        Properties:
          GroupName: wahaj-webserver
          SecurityGroupIngress:
            - IpProtocol: tcp
              FromPort: 22
              ToPort: 22
              CidrIp: 0.0.0.0/0
            - IpProtocol: tcp
              FromPort: 0
              ToPort: 0
              SourceSecurityGroupId: !Ref Albsg
              Description: For traffic from Internet
          GroupDescription: Security Group for demo server
          VpcId: !Ref VpcID
    dbsg:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupName: dbsg
            SecurityGroupIngress:
                - IpProtocol: tcp
                  FromPort: 22
                  ToPort: 22
                  CidrIp: 0.0.0.0/0
                - IpProtocol: tcp
                  FromPort: 0
                  ToPort: 0
                  SourceSecurityGroupId: !Ref wahajwebserver
                  Description: For traffic from Internet
            GroupDescription: Security Group for demo server
            VpcId: !Ref VpcID
    
        # Type: AWS::RDS::DBSecurityGroup
        # Properties: 
        # DBSecurityGroupIngress: 
        #     - EC2SecurityGroupName: !Ref wahajwebserver
        # EC2VpcId: !Ref VpcID
        # GroupDescription: access by EC2

Outputs:
  dbsg:
    Description: security group of wahajwebserver
    Value: !Ref dbsg
    Export:
        Name: "dbsg"
  wahajwebserver:
    Description: security group of wahajwebserver
    Value: !Ref wahajwebserver
    Export:
        Name: "wahajwebserver"
